# food-delivery-system

./: .dockerignore  .env.docker.example  .env.example  .env.local.example  .env.production.example  .gitignore  Dockerfile  README.md  docker-compose-prod.yml  docker-compose.yml  git_learning.txt  package.json  pyproject.toml  pytest.ini  review.py
.github/workflows/: cd.yml  ci.yml
apps/accounts/: admin.py  apps.py  forms.py  google_service.py  models.py  permissions.py  serializers.py  signals.py  urls.py  utils.py
apps/accounts/migrations/: 0001_initial.py  0002_alter_emailotp_purpose.py
apps/accounts/tests/: test_auth_views.py  test_authentication_e2e.py  test_models.py  test_utils.py
apps/accounts/views/: auth_views.py  email_verification_views.py  password_reset_views.py  profile_views.py
apps/cart/: admin.py  cart_service.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/cart/migrations/: 0001_initial.py  0002_rename_price_sapshot_cartitem_price_snapshot.py  0003_alter_cart_user.py
apps/menu/: admin.py  models.py  serializers.py  urls.py  views.py
apps/menu/migrations/: 0001_initial.py  0002_menuitem_is_menu.py  0003_alter_restaurant_id.py  0004_alter_category_name_alter_menuitem_description_and_more.py
apps/orders/: admin.py  consumers.py  models.py  order_service.py  routing.py  serializers.py  tasks.py  tests.py  urls.py  views.py
apps/orders/migrations/: 0001_initial.py  0002_order_delivery_address.py  0003_address_full_name.py  0004_order_updated_at_alter_order_order_number.py  0005_alter_order_tax_alter_order_total_and_more.py
config/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
config/settings/: base.py  development.py  docker.py  production.py  test.py
config/static/css/: checkout.css
docker/: Dockerfile
docs/: Clean_code_Guide.md  DEBUGGING_GUIDE.md  Powershell developer guide.md  command-environments-comparison.md  postman_api_testing.md  testin_guide.md
my-app/: package-lock.json  package.json
nginx/: nginx.conf
requirements/: base.txt  ci.txt  dev.txt  optional.txt  production.txt
static/css/: checkout.css  trackingorder.css
static/css/accounts/: personal_info.css  sidebar.css
static/css/auth/: auth.css  forgot_password.css  otp.css  reset_password.css  reset_password_otp.css
static/css/components/: spinner.css  toast.css
templates/: base.html  checkout.html  ordertracking.html  shell.html  test.html
templates/auth/: auth.html  forgot-password.html  reset_password.html  test.html  verify_email.html  verify_otp.html  verify_reset_otp.html
templates/errors/: 404.html
templates/pages/: home.html  menu.html
templates/parts/: navbar.html  sidebar.html
(+70 files in other folders)
