[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "FoodDeliverySystem"
version = "0.1.0"
description = "Food Delivery System"
requires-python = ">=3.13"

[tool.ruff]
required-version = ">=0.15.20"
target-version = "py313"
line-length = 88
src = ["apps", "config"]

exclude = [
    ".git",
    ".github",
    ".pytest_cache",
    ".ruff_cache",
    ".mypy_cache",
    ".tox",
    ".venv",
    "venv",
    "__pycache__",
    "node_modules",
    "staticfiles",
    "media",
    "logs",
    "**/migrations",
]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "UP",
    "B",
    "C4",
    "SIM",
    "RUF",
]

ignore = [
    "E501", "RUF012", "B904"
]

fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"manage.py" = ["E402"]
"config/asgi.py" = ["E402"]
"config/wsgi.py" = ["E402"]

"config/settings/base.py" = [
    "F403",
]

"config/settings/development.py" = [
    "F403",
    "F405",
]

"config/settings/production.py" = [
    "F403",
    "F405",
]

"config/settings/docker.py" = [
    "F403",
    "F405",
]

"**/tests/*.py" = [
    "S101",
]

[tool.ruff.lint.isort]
known-first-party = [
    "apps",
    "config",
]

known-third-party = [
    "django",
    "rest_framework",
    "channels",
]

combine-as-imports = true
split-on-trailing-comma = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
skip-magic-trailing-comma = false
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.development"
python_files = [
    "test_*.py",
    "*_test.py",
]
python_classes = [
    "Test*",
]
python_functions = [
    "test_*",
]
testpaths = [
    "apps",
]
addopts = [
    "--strict-config",
    "--strict-markers",
]

[tool.coverage.run]
branch = true
source = [
    "apps",
    "config",
]
omit = [
    "manage.py",
    "config/asgi.py",
    "config/wsgi.py",
    "*/migrations/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
precision = 2
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.mypy]
python_version = "3.13"
plugins = [
    "mypy_django_plugin.main",
]

check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
strict_optional = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "config.settings.development"